# chatr

./: .gitignore  Cargo.toml  README.md
client_chatr/: Cargo.toml
client_chatr/src/: chatr_widgets.rs  main.rs
client_chatr/src/chatr_widgets/: board_post.rs  text_box.rs
src/: chatroom.rs  client.rs  lib.rs  main.rs
