[package]
name = "chatr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }

borsh = { version = "1.5.7", features = ["bytes", "derive"] }
bytes = "1.10.1"
rustyline = "17.0.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
